# hello-actix

./: Cargo.toml  Dockerfile
config/: config.toml
src/: configuration.rs  elastic.rs  helpers.rs  main.rs
src/services/: health_check.rs  mod.rs  search.rs
