[package]
name = "hello-actix"
version = "0.1.0"
authors = ["bjk95 <bradleykester@quantexa.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "*"
serde = "1.0.124"
serde_json = "1.0.64"
config = "0.10.1"
elasticsearch = "7.9.0-alpha.1"
tokio = { version = "*", features = ["full"] }